# clique-sibyl-plaid-data-connector

./: .gitignore  Cargo.toml  Dockerfile.DCsv2.mTLS.sibyl  Dockerfile.DCsv2.sibyl  Dockerfile.mTLS.sibyl  Dockerfile.sibyl  README.md  sibyl.toml
.cargo/: config.toml
connectors/SibylPlaidDataConnector/: Cargo.toml
connectors/SibylPlaidDataConnector/src/: env.rs  lib.rs  plaid.rs
src/: lib.rs  plaid.rs
