[package]
name = "sibyl_plaid_data_connector"
version = "1.0.0"
authors = ["Wentao XIAO"]
edition = "2018"
license = "MIT"
readme = "README.md"
include = ["src/**/*.rs", "README.md"]

[dependencies]
#sgx_tstd    = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true, features = ["net", "untrusted_time"], tag = "v1.1.5" }
#serde_json  = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
#sibyl_base_data_connector = { git = "https://github.com/CliqueOfficial/SibylBaseDataConnector.git", rev = "d1e0f45" }
once_cell = { git = "https://github.com/mesalock-linux/once_cell-sgx" }
rsa = { git = "https://github.com/mesalock-linux/rustcrypto-RSA-sgx" }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3" }

#[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
#sgx_alloc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.5" }
#sgx_backtrace_sys = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.5" }
#sgx_build_helper = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.5" }
#sgx_demangle = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.5" }
#sgx_libc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.5" }
#sgx_rand = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.5" }
#sgx_tcrypto = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.5" }
#sgx_tprotected_fs = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.5" }
#sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.5" }
#sgx_tse = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.5" }
#sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.5" }
#sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.5" }
#sgx_unwind = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.5" }

[features]
default = ["mesalock_sgx"]
#mesalock_sgx = ["sgx_tstd"]
mesalock_sgx = []
